--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -74,7 +74,7 @@
   text-align: center;
   align-items: center;
   padding: 10px;
-  height: 100vw;
+  height: 100px;
 }
 
 .blockaideTitle
@@ -90,10 +90,10 @@
 .aboutTextBlock
 {
   width:auto;
-  height: 275px;
+  height: 350px;
   color:#CCC9C2;
   background-color:#232625;
-  padding:100px;
+  padding:75px;
   text-align:left;
   font-size: 2rem;
 }
@@ -103,7 +103,7 @@
   margin:1000px;
   background-color:#CCC9C2;
   color:#272A2A;
-  padding:100px 100px 100px 100px;
+  padding:px 100px 100px 100px;
   text-align:left;
   width:auto;
   height: 200px;
