--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -80,11 +80,13 @@
 .blockaideTitle
 {
   width:auto;
-  height: 415px;
+  height: 25vw;
   color:white;
   text-align:center;
-  margin-top:100px;
-  font: 15rem 'Franklin Gothic Medium', sans-serif;
+  vertical-align:center;
+  margin-top:7vw;
+  font: 15vw 'Franklin Gothic Medium', sans-serif;
+  text-size-adjust:50%;
 }
 
 .aboutTextBlock
@@ -96,16 +98,4 @@
   padding:75px;
   text-align:left;
   font-size: 2rem;
-}
-
-.aboutDescription
-{
-  margin:1000px;
-  background-color:#CCC9C2;
-  color:#272A2A;
-  padding:px 100px 100px 100px;
-  text-align:left;
-  width:auto;
-  height: 200px;
-
 }
