--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -99,3 +99,17 @@
   text-align:left;
   font-size: 2rem;
 }
+
+.footer
+{
+  border-top: solid #CCC9C2 .5px;
+  position:bottom;
+  bottom: 0;
+  left: 0;
+  padding: 3vw 5vw 5vw 5vw;
+  background-color: #232625;
+  color: white;
+  height: 80px;
+  width: 100%;
+  text-align: center;
+}
