--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,7 +2,7 @@
 
 .navbar {
   background-color: #131515;
-  height: 80px;
+  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
